--- a/iSmartHome/Base.lproj/Main.storyboard
+++ b/iSmartHome/Base.lproj/Main.storyboard
@@ -226,38 +226,58 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background_circles.png" translatesAutoresizingMaskIntoConstraints="NO" id="esm-Dx-m9h">
+                                <rect key="frame" x="0.0" y="64" width="414" height="580"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="580" id="E0o-Xo-yv5"/>
+                                </constraints>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="点击中间“＋”增加用户" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hM0-dj-iDq">
-                                <rect key="frame" x="122" y="86" width="170" height="21"/>
+                                <rect key="frame" x="126" y="86" width="180" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Xyu-37-TUa"/>
+                                    <constraint firstAttribute="width" constant="180" id="wKI-WG-VFK"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background_circles.png" translatesAutoresizingMaskIntoConstraints="NO" id="esm-Dx-m9h">
-                                <rect key="frame" x="0.0" y="68" width="414" height="600"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ukf-S2-h2b">
-                                <rect key="frame" x="162" y="323" width="90" height="90"/>
-                                <color key="backgroundColor" red="0.526374754363789" green="0.75693682236278392" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ukf-S2-h2b">
+                                <rect key="frame" x="167" y="313" width="80" height="80"/>
+                                <color key="backgroundColor" red="0.5525138650804724" green="0.77478983736028884" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="c5c-kS-3tM"/>
+                                    <constraint firstAttribute="width" constant="80" id="hmB-QA-adf"/>
+                                </constraints>
                                 <color key="tintColor" red="0.074509803920000006" green="0.73333333329999995" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" image="button_plus.png">
                                     <color key="titleColor" red="0.074509803920000006" green="0.73333333329999995" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="0y1-DJ-0hx" kind="push" id="swm-gb-UlW"/>
+                                    <segue destination="0y1-DJ-0hx" kind="push" id="S0k-Sq-JVi"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="esm-Dx-m9h" firstAttribute="centerX" secondItem="dSM-Gv-kVT" secondAttribute="centerX" id="8h8-T2-kdT"/>
-                            <constraint firstItem="ukf-S2-h2b" firstAttribute="centerX" secondItem="dSM-Gv-kVT" secondAttribute="centerX" id="E05-hF-yzc"/>
-                            <constraint firstItem="esm-Dx-m9h" firstAttribute="centerY" secondItem="dSM-Gv-kVT" secondAttribute="centerY" id="FAd-3c-oNE"/>
-                            <constraint firstItem="hM0-dj-iDq" firstAttribute="centerX" secondItem="dSM-Gv-kVT" secondAttribute="centerX" id="QXy-Z9-EeZ"/>
-                            <constraint firstItem="hM0-dj-iDq" firstAttribute="top" secondItem="Sg9-ex-uFL" secondAttribute="bottom" constant="22" id="Rla-Wd-0fe"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="hM0-dj-iDq" secondAttribute="trailing" constant="102" id="XVn-qU-QsN"/>
-                            <constraint firstItem="ukf-S2-h2b" firstAttribute="centerY" secondItem="dSM-Gv-kVT" secondAttribute="centerY" id="aZf-ms-0sZ"/>
-                            <constraint firstItem="hM0-dj-iDq" firstAttribute="leading" secondItem="dSM-Gv-kVT" secondAttribute="leadingMargin" constant="102" id="wEY-wM-wvD"/>
+                            <constraint firstItem="esm-Dx-m9h" firstAttribute="leading" secondItem="dSM-Gv-kVT" secondAttribute="leading" id="Jc3-bh-7lF"/>
+                            <constraint firstItem="esm-Dx-m9h" firstAttribute="centerY" secondItem="ukf-S2-h2b" secondAttribute="centerY" id="MSl-yY-cA1"/>
+                            <constraint firstItem="esm-Dx-m9h" firstAttribute="centerX" secondItem="ukf-S2-h2b" secondAttribute="centerX" id="Vk8-vQ-2bQ"/>
+                            <constraint firstItem="ukf-S2-h2b" firstAttribute="top" secondItem="Sg9-ex-uFL" secondAttribute="bottom" constant="249" id="YVN-Q6-78O"/>
+                            <constraint firstItem="ukf-S2-h2b" firstAttribute="centerY" secondItem="dSM-Gv-kVT" secondAttribute="centerY" id="aXB-Gt-3n9"/>
+                            <constraint firstItem="esm-Dx-m9h" firstAttribute="centerX" secondItem="ukf-S2-h2b" secondAttribute="centerX" id="dcU-ex-e9J"/>
+                            <constraint firstItem="esm-Dx-m9h" firstAttribute="top" secondItem="Sg9-ex-uFL" secondAttribute="bottom" id="ff3-or-T7P"/>
+                            <constraint firstItem="ukf-S2-h2b" firstAttribute="centerX" secondItem="hM0-dj-iDq" secondAttribute="centerX" constant="-9" id="lbl-ue-Pre"/>
+                            <constraint firstItem="hM0-dj-iDq" firstAttribute="top" secondItem="Sg9-ex-uFL" secondAttribute="bottom" constant="22" id="rQa-rv-wD8"/>
+                            <constraint firstAttribute="trailing" secondItem="esm-Dx-m9h" secondAttribute="trailing" id="ya6-S7-hIh"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="MSl-yY-cA1"/>
+                                <exclude reference="dcU-ex-e9J"/>
+                                <exclude reference="aXB-Gt-3n9"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="8FH-CP-Ccc">
                         <nil key="title"/>
@@ -285,6 +305,7 @@
         <!--User Info Register View Controller-->
         <scene sceneID="VJA-oy-jj7">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WdJ-JF-0dJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="0y1-DJ-0hx" customClass="UserInfoRegisterViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="4zI-Qh-odu"/>
@@ -294,24 +315,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CiH-Hb-VqK">
-                                <rect key="frame" x="0.0" y="64" width="414" height="193"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uYn-NY-2D1">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="310"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <color key="separatorColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <color key="sectionIndexColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <color key="sectionIndexBackgroundColor" red="0.072587820080000004" green="0.73144642110000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
-                                    <outlet property="dataSource" destination="0y1-DJ-0hx" id="xdR-Mz-jdR"/>
-                                    <outlet property="delegate" destination="0y1-DJ-0hx" id="7nn-2E-D2C"/>
+                                    <outlet property="dataSource" destination="0y1-DJ-0hx" id="PiL-RT-TTE"/>
+                                    <outlet property="delegate" destination="0y1-DJ-0hx" id="1x9-3u-L76"/>
                                 </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="CiH-Hb-VqK" firstAttribute="leading" secondItem="9vx-W1-Q2M" secondAttribute="leading" id="JMY-q3-SkN"/>
-                            <constraint firstAttribute="trailing" secondItem="CiH-Hb-VqK" secondAttribute="trailing" id="aQu-nY-vkg"/>
-                            <constraint firstItem="4d3-ki-RY3" firstAttribute="top" secondItem="CiH-Hb-VqK" secondAttribute="bottom" constant="479" id="fBu-uV-68z"/>
-                            <constraint firstItem="CiH-Hb-VqK" firstAttribute="top" secondItem="4zI-Qh-odu" secondAttribute="bottom" id="woj-bA-PLO"/>
+                            <constraint firstAttribute="trailing" secondItem="uYn-NY-2D1" secondAttribute="trailing" id="2iM-nR-a5c"/>
+                            <constraint firstItem="uYn-NY-2D1" firstAttribute="leading" secondItem="9vx-W1-Q2M" secondAttribute="leading" id="U2p-0P-w5w"/>
+                            <constraint firstItem="uYn-NY-2D1" firstAttribute="top" secondItem="4zI-Qh-odu" secondAttribute="bottom" constant="-64" id="nyD-qD-Rq5"/>
+                            <constraint firstItem="4d3-ki-RY3" firstAttribute="top" secondItem="uYn-NY-2D1" secondAttribute="bottom" constant="426" id="vmz-1H-fBV"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="0KS-Eu-OpA">
@@ -336,12 +354,11 @@
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                     <connections>
-                        <outlet property="tableView" destination="CiH-Hb-VqK" id="ShB-zJ-WgS"/>
+                        <outlet property="tableView" destination="uYn-NY-2D1" id="7or-qc-vJf"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="WdJ-JF-0dJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1928" y="19"/>
+            <point key="canvasLocation" x="1985" y="19"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="m4k-fi-tJL">
