--- a/iSmartHome/Base.lproj/Main.storyboard
+++ b/iSmartHome/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="i9e-ka-4D5">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -557,7 +558,8 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="vkA-f7-K9f" kind="push" id="2Cn-qo-LTB"/>
+                                    <action selector="connectionBtn:" destination="oU2-6q-Emg" eventType="touchUpInside" id="3cY-RJ-58q"/>
+                                    <segue destination="vkA-f7-K9f" kind="push" id="cxh-5b-TNd"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hnq-hE-P64">
@@ -679,10 +681,10 @@
             </objects>
             <point key="canvasLocation" x="3334" y="19"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Nav1 View Controller-->
         <scene sceneID="R0t-xt-np7">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="i9e-ka-4D5" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="i9e-ka-4D5" customClass="Nav1ViewController" sceneMemberID="viewController">
                     <toolbarItems/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Aej-s2-ikM">
