--- a/iSmartHome/ViewControllers/SofaControlView.xib
+++ b/iSmartHome/ViewControllers/SofaControlView.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
@@ -30,6 +31,10 @@
                 <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YL4-Wc-hre">
                     <rect key="frame" x="130" y="156" width="154" height="100"/>
                     <state key="normal" image="button_arrow_up.png"/>
+                    <connections>
+                        <action selector="s1Down:" destination="-1" eventType="touchDown" id="3Pn-LD-eW1"/>
+                        <action selector="s1Up:" destination="-1" eventType="touchUpInside" id="EAj-gb-cNC"/>
+                    </connections>
                 </button>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="big_icon_sofa_control.png" translatesAutoresizingMaskIntoConstraints="NO" id="7Cv-r0-fAy">
                     <rect key="frame" x="107" y="295" width="200" height="200"/>
@@ -39,6 +44,10 @@
                     <state key="normal" image="button_arrow_down.png">
                         <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="s2Down:" destination="-1" eventType="touchDown" id="Uyl-Uy-fru"/>
+                        <action selector="s2Up:" destination="-1" eventType="touchUpInside" id="iCk-7S-l1y"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
